--- a/WorksheetPlugin/pom.xml
+++ b/WorksheetPlugin/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.teststory.jspwiki</groupId>
-  <artifactId>worksheetplugin</artifactId>
+  <artifactId>WorksheetPlugin</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>worksheetplugin</name>
+  <name>WorksheetPlugin</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
