source encoding utf-8

--- a/WorksheetPlugin/pom.xml
+++ b/WorksheetPlugin/pom.xml
@@ -22,6 +22,9 @@
 	<version>0.3-SNAPSHOT</version>
 	<name>WorksheetPlugin</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
