--- a/WorksheetPlugin/pom.xml
+++ b/WorksheetPlugin/pom.xml
@@ -19,9 +19,18 @@
 	<groupId>de.teststory.jspwiki</groupId>
 	<artifactId>WorksheetPlugin</artifactId>
 	<packaging>jar</packaging>
-	<version>0.5-284</version>
 	<name>WorksheetPlugin</name>
 	<url>http://maven.apache.org</url>
+	<repositories>
+		<repository>
+			<id>clojars.org</id>
+			<url>http://clojars.org/repo</url>
+		</repository>
+		<repository>
+			<id>apache.org</id>
+			<url>http://maven.apache.org</url>
+		</repository>
+	</repositories>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -34,11 +43,15 @@
 		</dependency>
 		<!-- JSPWiki -->
 		<dependency>
-			<groupId>org.apache.jspwiki</groupId>
-			<artifactId>jspwiki-war</artifactId>
-			<version>2.10.2</version>
-			<classifier>classes</classifier>
+			<groupId>com.ecyrd</groupId>
+			<artifactId>jspwiki</artifactId>
+			<version>2.8.4</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 
 		<!-- Apache POI -->
