--- a/WorksheetPlugin/pom.xml
+++ b/WorksheetPlugin/pom.xml
@@ -19,6 +19,7 @@
 	<groupId>de.teststory.jspwiki</groupId>
 	<artifactId>WorksheetPlugin</artifactId>
 	<packaging>jar</packaging>
+	<version>0.5-284</version>
 	<name>WorksheetPlugin</name>
 	<url>http://maven.apache.org</url>
 	<repositories>
